objects/Activity.object
<CustomObject>
    <fields>
        <fullName>CN_Is_Overdue__c</fullName>
        <formula>((ActivityDate + DurationInMinutes/60/24)+ MOD((8- WEEKDAY(ActivityDate + DurationInMinutes / 60 / 24)),7)+7) &lt;= TODAY()</formula>
        <label>Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Prevent_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When the user try to delete the overdue visit, flow to update this field  then trigger the validation Rule to prevent delete</description>
        <label>Prevent Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_By_when__c</fullName>
        <label>By when</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One week after</fullName>
                </value>
                <value>
                    <fullName>Two weeks after</fullName>
                </value>
                <value>
                    <fullName>Three weeks after</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Chef_Feedback__c</fullName>
        <label>Chef Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CN_Chef_Request_Id__c</fullName>
        <label>Chef Request Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Chef_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chef Request</label>
        <referenceTo>CN_Chef_Request__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Chefs_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chefs Assigned</label>
        <referenceTo>CN_Chefs_Assigned__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_End_Date__c</fullName>
        <formula>ActivityDate +  DurationInMinutes / 60 / 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Follow_Up_Event_ID__c</fullName>
        <label>Follow Up Event ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Follow_up_Priority__c</fullName>
        <label>Follow-up Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Meeting_MInutes__c</fullName>
        <label>Meeting MInutes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CN_Next_Step__c</fullName>
        <label>Next Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Notify_Chef__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Chef</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Objective__c</fullName>
        <label>Objective</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New product launch recommend</fullName>
                </value>
                <value>
                    <fullName>Regular Product recommend</fullName>
                </value>
                <value>
                    <fullName>Contract negotiation</fullName>
                </value>
                <value>
                    <fullName>Price negotiation</fullName>
                </value>
                <value>
                    <fullName>Sample Feedback Collect</fullName>
                </value>
                <value>
                    <fullName>Logistic Problem Communication</fullName>
                </value>
                <value>
                    <fullName>Demo Service</fullName>
                </value>
                <value>
                    <fullName>cold visit</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Plan_to_Visit_Who__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan to Visit Who</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Sample_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sample Request</label>
        <referenceTo>CN_Sample_Request__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Status_Check__c</fullName>
        <label>Status Check</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Status_Diagnose__c</fullName>
        <label>Status Diagnose</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Time_Before_Event__c</fullName>
        <label>Time Before Event</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 day</fullName>
                    <default>true</default>
                    <label>1 day</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Visit_Status__c</fullName>
        <label>Visit Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                    <default>true</default>
                    <label>Planned</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>ACTIVITY_SUBTYPE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>EVENT.LOCATION</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>